# Python_WEB

./: README.md  pyproject.toml
HW_10/: pyproject.toml
HW_10/hw_django/hw_django/: settings.py  urls.py
HW_10/hw_django/quotes/: enemy_losses.py  forms.py  models.py  text  urls.py  views.py
HW_10/hw_django/quotes/migrations/: 0003_remove_quote_picture_author_picture.py
HW_10/hw_django/quotes/static/quotes/: style.css
HW_10/hw_django/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  dont_work.html  index.html
HW_10/hw_django/quotes/templatetags/: extract.py
HW_10/hw_django/users/: forms.py
HW_10/hw_django/users/templates/users/: logout.html  signin.html  signup.html
HW_10/hw_django/utils/: death moskaliv.py  main_scrapy.py  migration.py  scrapy_bs.py  search_pictures.py
HW_10_Django/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
HW_10_Django/hw_django/: enemy_losses.json  gpt_resp.json
HW_10_Django/hw_django/hw_django/: settings.py  urls.py
HW_10_Django/hw_django/quotes/: admin.py  apps.py  enemy_losses.py  for_test.py  for_test2.py  forms.py  models.py  quote_generator_gpt.py  text  urls.py  utils.py  views.py
HW_10_Django/hw_django/quotes/json/: enemy_losses.json  gpt_resp.json
HW_10_Django/hw_django/quotes/migrations/: 0001_initial.py  0002_quote_picture.py  0004_alter_author_picture.py  0005_quote_user_tag_user_tag_tag_of_username.py  0006_remove_tag_tag_of_username_remove_quote_user_and_more.py
HW_10_Django/hw_django/quotes/scheduler/: __init__.py  scheduler.py
HW_10_Django/hw_django/quotes/static/quotes/: style.css
HW_10_Django/hw_django/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  dont_work.html  index.html  search.html
HW_10_Django/hw_django/quotes/templatetags/: enemy_losses.json  enemy_losses.py  extract.py  quote_generator_gpt.py
HW_10_Django/hw_django/quotes/templatetags/json/: enemy_losses.json  gpt_resp.json
HW_10_Django/hw_django/scheduler/: enemy_losses.py  scheduler.py
HW_10_Django/hw_django/users/: forms.py  models.py  urls.py  views.py
HW_10_Django/hw_django/users/migrations/: 0001_initial.py  0002_alter_userprofile_avatar_alter_userprofile_user.py  0003_rename_userprofile_useravatar.py  0004_profile_delete_useravatar.py  0005_useravatar_delete_profile.py  0006_avatar_delete_useravatar.py
HW_10_Django/hw_django/users/templates/users/: password_reset.html  password_reset_confirm.html  profile.html  signin.html  signup.html  user_upload_avatar.html
HW_10_Django/hw_django/users/templatetags/: user_avatar.py
HW_10_Django/hw_django/utils/: add_quotes_to_mongo.py  apscheduler.py  migration.py
HW_11/: by_test.py  main.py  normalize_number.py  pyproject.toml
HW_11/src/routes/: contacts.py
HW_11_fastAPI/: .coverage  .env  by_test.py  docker-compose.yml  file.txt  main.py  normalize_number.py  pyproject.toml  readme.md  schemas.py  test.db
HW_11_fastAPI/docs/: conf.py
HW_11_fastAPI/docs/_build/doctrees/: environment.pickle  index.doctree
HW_11_fastAPI/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
HW_11_fastAPI/docs/_build/html/_sources/: index.rst.txt
HW_11_fastAPI/migrations/versions/: 0a2c51c23599_init.py  19ad36cafb95_add_users.py  9b2536c39a5f_add_user_s_role.py  bd3f3da0309b_add_veryfication.py
HW_11_fastAPI/pages/: router_auth.py
HW_11_fastAPI/postgres-data/base/13458/: 1247  1249  1259  16384  16387  16389  16398  16400  16401  16402  16403  16404  16405  16407  16414  16416  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  3501  (+5 more)
HW_11_fastAPI/postgres-data/global/: pg_control  pg_internal.init
HW_11_fastAPI/postgres-data/pg_stat/: db_0.stat  db_13458.stat  global.stat
HW_11_fastAPI/src/: schemas.py
HW_11_fastAPI/src/conf/: config.ini  config.py
HW_11_fastAPI/src/database/: db.py  models.py
HW_11_fastAPI/src/repository/: contacts.py  users.py
HW_11_fastAPI/src/routes/: auth.py  contacts.py  users.py
HW_11_fastAPI/src/services/: auth.py  email.py  roles.py  upload_avatar.py
HW_11_fastAPI/templates/: base.html  index.html  login.html  logout.html  signin.html  signup.html
HW_11_fastAPI/tests/: conftest.py  test_avatar.py  test_gpt.py  test_main.py  test_normalize_number.py  test_routes_auth.py  test_routes_contacts.py  test_services_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
HW_3/sort files_Thread/: main.py
HW_3_multiprocessing/: factorize.py  foctorize_mult.py
HW_4/: error.html  index.html  message.html  server.py
HW_4/storage/: data.json
HW_4_first_site/: Dockerfile  error.html  index.html  message.html  server.py
HW_4_first_site/storage/: blog.json
HW_4_first_site/templates/: blog.html
HW_5/: application.logs  exchange_rate.py  logg.txt  pars_date.py  server_chat.py  test.py  test2.py  timing.py
HW_5_aiohttp/: application.logs  exchange_rate.py  logger.py  main.css  pars_date.py  server_chat.py
HW_6/: aux_functions.py  create_table.py  insert_to_db.py  query.py
HW_6/requests/: request_10.sql  request_12.sql  request_4.sql  request_5.sql  request_6.sql  request_7.sql  (+1 more)
HW_6_SQL/: connection.py  query.py
HW_7/: aux_functions.py  config.ini  main.py  my_select.py  seeds.py
HW_7_SQLAlchemy/: aux_functions.py  main.py  pyproject.toml
HW_7_SQLAlchemy/alembic/versions/: 69eaf77e4c62_first.py
HW_7_SQLAlchemy/database/: models.py
HW_8/: pyproject.toml
HW_8/odm_mongoengine/: cache.py  models.py  read.py
HW_8/rabbitMQ/: normalize_phone.py  produser.py
HW_9/: models.py  pyproject.toml
HW_9_scraping/: create.py  main_bf_soup.py  main_scrapy.py
(+22 files in other folders)
