[tool.poetry]
name = "homework-web"
version = "0.1.0"
description = ""
authors = ["Sanyavas <vasilinaoleksandr@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_web"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
aiopath = "^0.6.11"
websockets = "^10.4"
names = "^0.3.0"
prettytable = "^3.6.0"
psycopg2 = "^2.9.5"
faker = "^18.3.0"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
uri = "^2.0.1"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
