[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["Sanyavas <vasilinaoleksandr@gmail.com>"]
readme = "README.md"
#packages = [{include = "hw_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"
pymongo = "^4.3.3"
icrawler = "^0.6.6"
scrapy = "^2.8.0"
pyzmq = "^25.0.2"
ipykernel = "^6.22.0"
django-apscheduler = "^0.6.2"
django-environ = "^0.10.0"
openai = "^0.27.7"
psycopg2-binary = "^2.9.6"
numpy = "^1.25.0"
cloudinary = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
