[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["Sanyavas <vasilinaoleksandr@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
pydantic = {extras = ["email"], version = "^1.10.7"}
jinja2 = "^3.1.2"
datetime = "^5.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.8"
redis = "^4.5.5"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
httpx = "^0.24.1"
faker = "^18.9.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
asynctest = "^0.13.0"
pyjwt = "^2.7.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
