[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Sanyavas <vasilinaoleksandr@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_7"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^18.3.1"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
prettytable = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
